[package]
name = "mds"
version = "0.1.0"
edition = "2018"

#build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


csv = "1.1"

serde = "*"
serde_json = "*"

#bincode = "*"
#serde_cbor = "0.11.2"

tch = "0.7.2"
anyhow = "*"

nalgebra = "0.31.1"


#many-to-many = { version = "0.1.3", features = ["serde"] }

#sbr = "0.4.0"
#sbr = { path = ".././sbr-rs-master" }

rand = { version = "0.5.0", features = ["serde1"] }